--- a/recovery/root/init.recovery.mt6893.rc
+++ b/recovery/root/init.recovery.mt6893.rc
@@ -1,9 +1,10 @@
-import /init.recovery.project.rc
-import /init.recovery.usb.rc
+import /tee.rc
+import /trustonic.rc
 
 on init
     setprop sys.usb.configfs 1
     setprop sys.usb.ffs.aio_compat 1
+    export LD_LIBRARY_PATH /system/lib64:/vendor/lib64:/vendor/lib64/hw:/system/lib64/hw
 
 on fs && property:ro.debuggable=0
     # distinguish USB shoulde connect or not, i.e. CDP vs SDP
@@ -25,6 +26,9 @@ on post-fs
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
     start mtk.plpath.utils.link
 
+on property:ro.crypto.state=encrypted && property:ro.crypto.type=file
+    install_keyring
+
 service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
     class main
     user root
@@ -32,6 +36,41 @@ service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
     disabled
     oneshot
     seclabel u:r:recovery:s0
+
+service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
+    interface android.hardware.gatekeeper@1.0::IGatekeeper default
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
+
+service keymaster-4-1 /system/bin/android.hardware.keymaster@4.1-service.trustonic
+    interface android.hardware.keymaster@4.0::IKeymasterDevice default
+    interface android.hardware.keymaster@4.1::IKeymasterDevice default
+    user root
+    group root drmrpc
+    disabled
+    oneshot
+    seclabel u:r:recovery:s0
+
+on property:vendor.sys.listener.registered=true
+    start gatekeeper-1-0
+    start keymaster-4-1
+   
+on property:ro.crypto.state=unsupported
+    stop mobicore
+    stop keymaster-4-1
+    stop gatekeeper-1-0
+    
+on property:ro.crypto.state=unencrypted
+    stop mobicore
+    stop keymaster-4-1
+    stop gatekeeper-1-0
+        
+on property:twrp.all.users.decrypted=true
+    stop mobicore
+    stop keymaster-4-1
+    stop gatekeeper-1-0
 
 on boot
     start boot-hal-1-2
