--- a/recovery/root/init.recovery.mt6893.rc
+++ b/recovery/root/init.recovery.mt6893.rc
@@ -1,14 +1,10 @@
-import /tee.rc
-import /trustonic.rc
+import /init.recovery.trustonic.rc
 
 on init
     setprop sys.usb.configfs 1
     setprop sys.usb.ffs.aio_compat 1
     export LD_LIBRARY_PATH /system/lib64:/vendor/lib64:/vendor/lib64/hw:/system/lib64/hw
-
-on fs && property:ro.debuggable=0
-    # distinguish USB shoulde connect or not, i.e. CDP vs SDP
-    # set charging free due to it wait for USB activation
+    mkdir /mnt/vendor/persist 0771 system system
 
 on post-fs
     # Support A/B feature for EMMC and UFS boot region
@@ -26,6 +22,23 @@ on post-fs
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
     start mtk.plpath.utils.link
 
+    chown system system /mnt/vendor/persist
+    chmod 0771 /mnt/vendor/persist
+
+    # We restorecon /mnt/vendor/persist to set SEPolicy label.
+    restorecon /mnt/vendor/persist
+
+    # Create mcRegistry to store failure record
+    mkdir /mnt/vendor/persist/mcRegistry 0771 system system
+    mkdir /mnt/vendor/persist/paytrigger
+    chown system system /mnt/vendor/persist/paytrigger
+    chmod 0777 /mnt/vendor/persist/paytrigger
+
+on post-fs-data
+    # Create /data/vendor/key_provisioning dir and get proper encryption policy installed
+    # Key Installation
+    mkdir /data/vendor/key_provisioning 0771 system system
+
 on property:ro.crypto.state=encrypted && property:ro.crypto.type=file
     install_keyring
 
@@ -40,6 +53,7 @@ service keystore /system/bin/keystore /tmp/misc/keystore
     user root
     group root drmrpc readproc
     disabled
+    writepid /dev/cpuset/foreground/tasks
     seclabel u:r:recovery:s0
 
 service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
@@ -60,25 +74,60 @@ service keymaster-4-1 /system/bin/android.hardware.keymaster@4.1-service.truston
     disabled
     seclabel u:r:recovery:s0
 
+service tee-1-1 /system/bin/vendor.trustonic.tee@1.1-service
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
+
 on property:vendor.sys.listener.registered=true
+    start mobicore
     start gatekeeper-1-0
     start keymaster-4-1
+    start tee-1-1
    
+on property:hwservicemanager.ready=true
+    start mobicore
+    start keymaster-4-1
+    start gatekeeper-1-0
+    start tee-1-1
+
 on property:ro.crypto.state=unsupported
     stop mobicore
     stop keymaster-4-1
     stop gatekeeper-1-0
-    
+    stop tee-1-1
+
 on property:ro.crypto.state=unencrypted
     stop mobicore
     stop keymaster-4-1
     stop gatekeeper-1-0
+    stop tee-1-1
         
 on property:twrp.all.users.decrypted=true
     stop mobicore
     stop keymaster-4-1
     stop gatekeeper-1-0
+    stop tee-1-1
 
 on boot
     start boot-hal-1-2
     start health-hal-2-1
+
+# For META/FACTORY mode
+on property:ro.crypto.state=unencrypted
+    write /proc/bootprof "MOBICORE: create /data/vendor/mcRegistry ++ (unencrypted)"
+    mkdir /data/vendor/mcRegistry 0775 system system
+    write /proc/bootprof "MOBICORE: create /data/vendor/mcRegistry -- (unencrypted)"
+
+# Normal mode, FBE
+on property:ro.crypto.type=file && property:ro.crypto.state=encrypted
+    write /proc/bootprof "MOBICORE: create /data/vendor/mcRegistry ++ (FBE encrypted)"
+    mkdir /data/vendor/mcRegistry 0775 system system
+    write /proc/bootprof "MOBICORE: create /data/vendor/mcRegistry -- (FBE encrypted)"
+
+# Normal mode, FDE
+on property:vold.decrypt=trigger_restart_framework
+    write /proc/bootprof "MOBICORE: create /data/vendor/mcRegistry ++ (FDE encrypted)"
+    mkdir /data/vendor/mcRegistry 0775 system system
+    write /proc/bootprof "MOBICORE: create /data/vendor/mcRegistry -- (FDE encrypted)"
