--- a/recovery/root/init.recovery.mt6893.rc
+++ b/recovery/root/init.recovery.mt6893.rc
@@ -6,6 +6,9 @@ on init
     export LD_LIBRARY_PATH /system/lib64:/vendor/lib64:/vendor/lib64/hw:/system/lib64/hw
     mkdir /mnt/vendor/persist 0771 system system
 
+on boot
+    setprop sys.usb.controller "11201000.usb0"
+
 on post-fs
     # Support A/B feature for EMMC and UFS boot region
     symlink /dev/block/sda /dev/block/mmcblk0boot0
@@ -18,26 +21,10 @@ on post-fs
     symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/platform/bootdevice/by-name/preloader_emmc_b
     symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/platform/bootdevice/by-name/preloader_ufs_a
     symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/platform/bootdevice/by-name/preloader_ufs_b
+    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/by-name/preloader_ufs_b
 
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
     start mtk.plpath.utils.link
-
-    chown system system /mnt/vendor/persist
-    chmod 0771 /mnt/vendor/persist
-
-    # We restorecon /mnt/vendor/persist to set SEPolicy label.
-    restorecon /mnt/vendor/persist
-
-    # Create mcRegistry to store failure record
-    mkdir /mnt/vendor/persist/mcRegistry 0771 system system
-    mkdir /mnt/vendor/persist/paytrigger
-    chown system system /mnt/vendor/persist/paytrigger
-    chmod 0777 /mnt/vendor/persist/paytrigger
-
-on post-fs-data
-    # Create /data/vendor/key_provisioning dir and get proper encryption policy installed
-    # Key Installation
-    mkdir /data/vendor/key_provisioning 0771 system system
 
 on property:ro.crypto.state=encrypted && property:ro.crypto.type=file
     install_keyring
@@ -52,12 +39,6 @@ service keystore_auth /system/bin/keystore_auth
 service keystore /system/bin/keystore /tmp/misc/keystore
     user root
     group root drmrpc readproc
-    disabled
-    seclabel u:r:recovery:s0
-
-service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
-    user root
-    group root system
     disabled
     seclabel u:r:recovery:s0
 
@@ -108,25 +89,3 @@ on property:twrp.all.users.decrypted=true
     stop keymaster-4-1
     stop gatekeeper-1-0
     stop tee-1-1
-
-on boot
-    start boot-hal-1-2
-    start health-hal-2-1
-
-# For META/FACTORY mode
-on property:ro.crypto.state=unencrypted
-    write /proc/bootprof "MOBICORE: create /data/vendor/mcRegistry ++ (unencrypted)"
-    mkdir /data/vendor/mcRegistry 0775 system system
-    write /proc/bootprof "MOBICORE: create /data/vendor/mcRegistry -- (unencrypted)"
-
-# Normal mode, FBE
-on property:ro.crypto.type=file && property:ro.crypto.state=encrypted
-    write /proc/bootprof "MOBICORE: create /data/vendor/mcRegistry ++ (FBE encrypted)"
-    mkdir /data/vendor/mcRegistry 0775 system system
-    write /proc/bootprof "MOBICORE: create /data/vendor/mcRegistry -- (FBE encrypted)"
-
-# Normal mode, FDE
-on property:vold.decrypt=trigger_restart_framework
-    write /proc/bootprof "MOBICORE: create /data/vendor/mcRegistry ++ (FDE encrypted)"
-    mkdir /data/vendor/mcRegistry 0775 system system
-    write /proc/bootprof "MOBICORE: create /data/vendor/mcRegistry -- (FDE encrypted)"
