--- a/recovery/root/init.recovery.mt6893.rc
+++ b/recovery/root/init.recovery.mt6893.rc
@@ -7,6 +7,7 @@ on init
     mkdir /mnt/vendor/persist 0771 system system
 
 on boot
+    start boot-hal-1-2
     setprop sys.usb.controller "11201000.usb0"
 
 on post-fs
