--- a/recovery/root/init.recovery.mt6893.rc
+++ b/recovery/root/init.recovery.mt6893.rc
@@ -44,19 +44,19 @@ service keystore /system/bin/keystore /tmp/misc/keystore
     disabled
     seclabel u:r:recovery:s0
 
-service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
+service gatekeeper-1-0 /vendor/bin/hw/android.hardware.gatekeeper@1.0-service
     user root
     group root
     disabled
     seclabel u:r:recovery:s0
 
-service keymaster-4-1 /system/bin/android.hardware.keymaster@4.1-service.trustonic
+service keymaster-4-1 /vendor/bin/hw/android.hardware.keymaster@4.1-service.trustonic
     user root
     group root drmrpc
     disabled
     seclabel u:r:recovery:s0
 
-service tee-1-1 /system/bin/vendor.trustonic.tee@1.1-service
+service tee-1-1 /vendor/bin/hw/vendor.trustonic.tee@1.1-service
     user root
     group root
     disabled
